Minor fixes, added missing styles, fixed format for better readability.

--- a/www/html/css/style.css
+++ b/www/html/css/style.css
@@ -1,9 +1,18 @@
-body {
-    padding: 0;
-    margin: 0;
+* {
     line-height: 1.4;
     font-family: Verdana, "DejaVu Sans", Arial, sans-serif;
 }
+
+body {
+    padding: 0;
+    margin: 0;
+}
+
+h3 {
+    margin-left: 30px;
+}
+
+/* navbar */
 
 .section_navbar h1 {
     margin: 0;
@@ -22,7 +31,7 @@ body {
     width: auto;
 }
 
-li {
+.section_navbar li {
     background-color: #3498DB;
     border-right: 1px solid white;
     font-size: 15px;
@@ -34,12 +43,12 @@ li {
     max-height: 60px;
 }
 
-li:first-child {
+.section_navbar li:first-child {
     padding: 0;
     width: auto;
 }
 
-ul {
+.section_navbar ul {
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -48,26 +57,44 @@ ul {
     padding: 0;
 }
 
-ul #filler {
+.section_navbar ul #filler {
     flex: 1 1 auto;
 }
 
-#logo {
+.section_navbar #logo {
     display: grid;
     grid-template-columns: auto auto;
 }
 
-#logo img {
+.section_navbar #logo img {
     height: 60px;
     align-items: center;
 }
 
-#logo h1 {
+.section_navbar #logo h1 {
     display: flex;
     align-items: center;
     justify-content: center;
     white-space: nowrap;
 }
+
+
+/* login display, button to overview section*/
+
+#uname_div {
+    text-align: right;
+    padding: 0 10px;
+    border-bottom: #3498DB 1px solid;
+}
+
+.button_back {
+    color: #2980B9;
+    margin: 30px;
+    text-decoration: none;
+    padding: 10px 0;
+}
+
+/* login form */
 
 #section_login {
     display: flex;
@@ -136,21 +163,19 @@ footer div {
     justify-content: flex-end;
 }
 
-/* User management section */
+/* General styles for tables */
 
 .section_table {
     display: flex;
     align-items: flex-end;
     justify-content: center;
     flex-direction: column;
-    padding: 0 10px;
     max-width: fit-content;
-    margin: 10px;
-    padding: 20px;
+    margin: 30px;
 }
 
 .section_table table {
-    padding: 20px;
+    margin-left: 30px;
     border: #CCCCCC 1px solid;
     border-collapse: collapse;
     width: 100%;
@@ -200,17 +225,25 @@ footer div {
 }
 
 .section_table>a {
-    border: #CCCCCC 1px solid;
+    border: #3498DB 2px solid;
     border-top: none;
     background-color: #ECECEC;
     padding: 5px;
     border-radius:0 0 5px 5px;
 }
 
-/* Add user section */
+.section_table button {
+    border: #3498DB 2px solid;
+    border-top: none;
+    background-color: #ECECEC;
+    padding: 5px;
+    border-radius: 0 0 5px 5px;
+}
+
+/* General style for forms */
 
 .section_form div {
-    margin-left: 20px;
+    margin-left: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -233,6 +266,7 @@ footer div {
     display: grid;
     grid-template-columns: 40% 60%;
     padding: 0 0 10px 0;
+    min-width: 200px;
 }
 
 .section_form button {
@@ -249,7 +283,7 @@ footer div {
 
 .section_form input {
     font-size: 15px;
-    padding: 0 10px;
+    padding: 2px 10px;
     border: none;
     border-bottom: #3498DB 1px solid;
 }
@@ -258,18 +292,16 @@ footer div {
     margin: 10px;
 }
 
-/* Add room section */
 
+/*TODO predelat*/
 #section_manage_rooms tr td:first-child {
     padding: 10px;
     text-align: left;
 }
 
-.button_back {
-    color: #3498DB;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
+/* Edit course page */
 
-/* Edit user section */
+#edit_course {
+    display: grid;
+    margin: 10px auto;
+}
